// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-table Custom Header 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        colspan="2"
      >
        NAME, USERNAME
      </th>
       
      <th>
        AGE
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        colspan="2"
      >
        Jonathan - jonathan.25
      </td>
       
      <td>
        25
      </td>
    </tr>
    <tr>
      <td
        colspan="2"
      >
        Carl - carl.30
      </td>
       
      <td>
        30
      </td>
    </tr>
    <tr>
      <td
        colspan="2"
      >
        Jacob - jacob.26
      </td>
       
      <td>
        26
      </td>
    </tr>
    <tr>
      <td
        colspan="2"
      >
        Vincent - vincent.34
      </td>
       
      <td>
        34
      </td>
    </tr>
    <tr>
      <td
        colspan="2"
      >
        Manon - manon.34
      </td>
       
      <td>
        28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Custom cell 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
        style="width: 16px;"
      >
        <div
          class="m-table__header-name"
        />
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
         AGE 
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
      <th
        class=""
        scope="col"
        style="width: 33px;"
      >
        <div
          class="m-table__header-name"
        />
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class=""
      >
        <div
          class="m-checkbox m--is-checkbox-left"
        >
          <input
            class="m-checkbox__hidden"
            id="mCheckbox-fakeId"
            type="checkbox"
          />
           
          <!---->
           
          <label
            aria-hidden="true"
            class="m-checkbox__wrap"
            for="mCheckbox-fakeId"
          >
            <span
              aria-hidden="true"
              class="m-checkbox__input"
            >
              <span
                class="m-checkbox__input__icon"
              />
            </span>
             
            <!---->
          </label>
           
          <div
            class="m-validation-message m-checkbox__message"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </td>
      <td
        class=""
      >
        Jonathan
      </td>
      <td
        class=""
      >
         25 ans 
      </td>
      <td
        class=""
      >
        jonathan.25
      </td>
      <td
        class=""
      >
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        <div
          class="m-checkbox m--is-checkbox-left"
        >
          <input
            class="m-checkbox__hidden"
            id="mCheckbox-fakeId"
            type="checkbox"
          />
           
          <!---->
           
          <label
            aria-hidden="true"
            class="m-checkbox__wrap"
            for="mCheckbox-fakeId"
          >
            <span
              aria-hidden="true"
              class="m-checkbox__input"
            >
              <span
                class="m-checkbox__input__icon"
              />
            </span>
             
            <!---->
          </label>
           
          <div
            class="m-validation-message m-checkbox__message"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </td>
      <td
        class=""
      >
        Carl
      </td>
      <td
        class=""
      >
         30 ans 
      </td>
      <td
        class=""
      >
        carl.30
      </td>
      <td
        class=""
      >
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        <div
          class="m-checkbox m--is-checkbox-left"
        >
          <input
            class="m-checkbox__hidden"
            id="mCheckbox-fakeId"
            type="checkbox"
          />
           
          <!---->
           
          <label
            aria-hidden="true"
            class="m-checkbox__wrap"
            for="mCheckbox-fakeId"
          >
            <span
              aria-hidden="true"
              class="m-checkbox__input"
            >
              <span
                class="m-checkbox__input__icon"
              />
            </span>
             
            <!---->
          </label>
           
          <div
            class="m-validation-message m-checkbox__message"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </td>
      <td
        class=""
      >
        Jacob
      </td>
      <td
        class=""
      >
         26 ans 
      </td>
      <td
        class=""
      >
        jacob.26
      </td>
      <td
        class=""
      >
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        <div
          class="m-checkbox m--is-checkbox-left"
        >
          <input
            class="m-checkbox__hidden"
            id="mCheckbox-fakeId"
            type="checkbox"
          />
           
          <!---->
           
          <label
            aria-hidden="true"
            class="m-checkbox__wrap"
            for="mCheckbox-fakeId"
          >
            <span
              aria-hidden="true"
              class="m-checkbox__input"
            >
              <span
                class="m-checkbox__input__icon"
              />
            </span>
             
            <!---->
          </label>
           
          <div
            class="m-validation-message m-checkbox__message"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </td>
      <td
        class=""
      >
        Vincent
      </td>
      <td
        class=""
      >
         34 ans 
      </td>
      <td
        class=""
      >
        vincent.34
      </td>
      <td
        class=""
      >
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        <div
          class="m-checkbox m--is-checkbox-left"
        >
          <input
            class="m-checkbox__hidden"
            id="mCheckbox-fakeId"
            type="checkbox"
          />
           
          <!---->
           
          <label
            aria-hidden="true"
            class="m-checkbox__wrap"
            for="mCheckbox-fakeId"
          >
            <span
              aria-hidden="true"
              class="m-checkbox__input"
            >
              <span
                class="m-checkbox__input__icon"
              />
            </span>
             
            <!---->
          </label>
           
          <div
            class="m-validation-message m-checkbox__message"
          >
            <!---->
             
            <!---->
          </div>
        </div>
      </td>
      <td
        class=""
      >
        Manon
      </td>
      <td
        class=""
      >
         28 ans 
      </td>
      <td
        class=""
      >
        manon.28
      </td>
      <td
        class=""
      >
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
  </tbody>
   
  <tfoot>
    <tr>
      <td
        class="m-table-sandbox__show-more"
        colspan="4"
        style="text-align: center;"
      >
        <button
          class="m-button m-table-sandbox__show-more-button m--is-skin-primary"
          type="button"
        >
          <!---->
           
          <!---->
           
          <span
            class="m-button__text"
          >
            <p
              class="m-u--no-margin"
            >
              Show more results
            </p>
             
            <span>
              1-5 of 45
            </span>
             
            <!---->
          </span>
           
          <!---->
           
          <!---->
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Storyshots modul-components|m-table Custom columns class 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-simple m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--custom-class"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name, Username
        </div>
      </th>
      <th
        class=""
        scope="col"
        style="width: 80px;"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--custom-class"
      >
        Jonathan
      </td>
      <td
        class=""
      >
        25
      </td>
    </tr>
    <tr>
      <td
        class="m--custom-class"
      >
        Carl
      </td>
      <td
        class=""
      >
        30
      </td>
    </tr>
    <tr>
      <td
        class="m--custom-class"
      >
        Jacob
      </td>
      <td
        class=""
      >
        26
      </td>
    </tr>
    <tr>
      <td
        class="m--custom-class"
      >
        Vincent
      </td>
      <td
        class=""
      >
        34
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Custom row 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
        style="width: 16px;"
      >
        <div
          class="m-table__header-name"
        />
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
      <th
        class=""
        scope="col"
        style="width: 33px;"
      >
        <div
          class="m-table__header-name"
        />
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td />
       
      <td>
         Jonathan
      </td>
       
      <td
        colspan="2"
      >
        
                                25 ans - jonathan.25
                            
      </td>
       
      <td>
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td />
       
      <td>
         Carl
      </td>
       
      <td
        colspan="2"
      >
        
                                30 ans - carl.30
                            
      </td>
       
      <td>
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td />
       
      <td>
         Jacob
      </td>
       
      <td
        colspan="2"
      >
        
                                26 ans - jacob.26
                            
      </td>
       
      <td>
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td />
       
      <td>
         Vincent
      </td>
       
      <td
        colspan="2"
      >
        
                                34 ans - vincent.34
                            
      </td>
       
      <td>
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td />
       
      <td>
         Manon
      </td>
       
      <td
        colspan="2"
      >
        
                                28 ans - manon.28
                            
      </td>
       
      <td>
        <div
          class="m-option"
        >
          <div
            class="m-popup m--is-inline"
          >
            <div
              class="m-popper"
            >
              <div>
                <button
                  aria-controls="mOption-fakeId-controls"
                  aria-haspopup="true"
                  class="m-icon-button m--is-skin-light m--has-ripple"
                  id="mOption-fakeId"
                  style="width: 33px; height: 33px;"
                  title="Ouvrir le menu"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-icon-button__icon"
                    height="20px"
                    width="20px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                   
                  <!---->
                </button>
              </div>
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </td>
    </tr>
  </tbody>
   
  <tfoot>
    <tr>
      <td
        class="m-table-sandbox__show-more"
        colspan="4"
        style="text-align: center;"
      >
        <button
          class="m-button m-table-sandbox__show-more-button m--is-skin-primary"
          type="button"
        >
          <!---->
           
          <!---->
           
          <span
            class="m-button__text"
          >
            <p
              class="m-u--no-margin"
            >
              Show more results
            </p>
             
            <span>
              1-5 of 45
            </span>
             
            <!---->
          </span>
           
          <!---->
           
          <!---->
        </button>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Storyshots modul-components|m-table Default 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class=""
      >
        Jonathan
      </td>
      <td
        class=""
      >
        25
      </td>
      <td
        class=""
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Carl
      </td>
      <td
        class=""
      >
        30
      </td>
      <td
        class=""
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Jacob
      </td>
      <td
        class=""
      >
        26
      </td>
      <td
        class=""
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Vincent
      </td>
      <td
        class=""
      >
        34
      </td>
      <td
        class=""
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Manon
      </td>
      <td
        class=""
      >
        28
      </td>
      <td
        class=""
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Empty table - custom slot 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr
      class="m-table__placeholder"
    >
      <td
        class="m-table__placeholder-container"
        colspan="100%"
        style="position: absolute;"
      >
        <!---->
         
        <div
          class="m-table__placeholder-message"
          style="width: 100%;"
        >
          <td
            class="m-table-sandbox__empty__cell"
            colspan="3"
          >
            
                                Empty table
                            
          </td>
           
          <!---->
        </div>
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Empty table - default slot 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr
      class="m-table__placeholder"
    >
      <td
        class="m-table__placeholder-container"
        colspan="100%"
        style="position: absolute;"
      >
        <!---->
         
        <div
          class="m-table__placeholder-message"
          style="width: 100%;"
        >
          <p>
            Aucune donnée à afficher
          </p>
           
          <!---->
        </div>
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Loading 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-loading m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr
      class="m-table__placeholder"
    >
      <td
        class="m-table__placeholder-container"
        colspan="100%"
        style="position: absolute;"
      >
        <div
          class="m-progress m--is-indeterminate m--is-in-progress"
          style="height: 6px; border-radius: initial;"
        >
          <div
            class="m-progress__bar"
            style="width: 0%; border-bottom-left-radius: initial; border-top-left-radius: initial;"
          />
           
          <!---->
        </div>
         
        <div
          class="m-table__placeholder-message"
          style="width: 100%;"
        >
          <!---->
           
          <p>
            Chargement en cours
          </p>
           
          <p
            class="m-table__placeholder-precision"
          >
            Veuillez patienter svp.
          </p>
        </div>
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Sortable 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Name
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Age
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple m--is-sort-desc"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Username
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable"
      >
        25
      </td>
      <td
        class="m--is-sortable"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Carl
      </td>
      <td
        class="m--is-sortable"
      >
        30
      </td>
      <td
        class="m--is-sortable"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable"
      >
        26
      </td>
      <td
        class="m--is-sortable"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Vincent
      </td>
      <td
        class="m--is-sortable"
      >
        34
      </td>
      <td
        class="m--is-sortable"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Manon
      </td>
      <td
        class="m--is-sortable"
      >
        28
      </td>
      <td
        class="m--is-sortable"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Sortable width custom header cell 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            NAME (custom) 
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            AGE (custom) 
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple m--is-sort-desc"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            USERNAME (custom) 
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable"
      >
        25
      </td>
      <td
        class="m--is-sortable"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Carl
      </td>
      <td
        class="m--is-sortable"
      >
        30
      </td>
      <td
        class="m--is-sortable"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable"
      >
        26
      </td>
      <td
        class="m--is-sortable"
      >
        jacob.26
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Sortable with unsorting 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Name
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Age
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple m--is-sort-desc"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Username
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable"
      >
        25
      </td>
      <td
        class="m--is-sortable"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Carl
      </td>
      <td
        class="m--is-sortable"
      >
        30
      </td>
      <td
        class="m--is-sortable"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable"
      >
        26
      </td>
      <td
        class="m--is-sortable"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Vincent
      </td>
      <td
        class="m--is-sortable"
      >
        34
      </td>
      <td
        class="m--is-sortable"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable"
      >
        Manon
      </td>
      <td
        class="m--is-sortable"
      >
        28
      </td>
      <td
        class="m--is-sortable"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align center - Sortable 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Name
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Age
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Username
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        25
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        Carl
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        30
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        26
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        Vincent
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        34
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        Manon
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        28
      </td>
      <td
        class="m--is-sortable m--is-text-align-center"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align center 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class="m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class="m--is-text-align-center"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-text-align-center"
      >
        Jonathan
      </td>
      <td
        class="m--is-text-align-center"
      >
        25
      </td>
      <td
        class="m--is-text-align-center"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-center"
      >
        Carl
      </td>
      <td
        class="m--is-text-align-center"
      >
        30
      </td>
      <td
        class="m--is-text-align-center"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-center"
      >
        Jacob
      </td>
      <td
        class="m--is-text-align-center"
      >
        26
      </td>
      <td
        class="m--is-text-align-center"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-center"
      >
        Vincent
      </td>
      <td
        class="m--is-text-align-center"
      >
        34
      </td>
      <td
        class="m--is-text-align-center"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-center"
      >
        Manon
      </td>
      <td
        class="m--is-text-align-center"
      >
        28
      </td>
      <td
        class="m--is-text-align-center"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align left - Sortable 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Name
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Age
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Username
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        25
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        Carl
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        30
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        26
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        Vincent
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        34
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        Manon
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        28
      </td>
      <td
        class="m--is-sortable m--is-text-align-left"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align left 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class="m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class="m--is-text-align-left"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-text-align-left"
      >
        Jonathan
      </td>
      <td
        class="m--is-text-align-left"
      >
        25
      </td>
      <td
        class="m--is-text-align-left"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-left"
      >
        Carl
      </td>
      <td
        class="m--is-text-align-left"
      >
        30
      </td>
      <td
        class="m--is-text-align-left"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-left"
      >
        Jacob
      </td>
      <td
        class="m--is-text-align-left"
      >
        26
      </td>
      <td
        class="m--is-text-align-left"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-left"
      >
        Vincent
      </td>
      <td
        class="m--is-text-align-left"
      >
        34
      </td>
      <td
        class="m--is-text-align-left"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-left"
      >
        Manon
      </td>
      <td
        class="m--is-text-align-left"
      >
        28
      </td>
      <td
        class="m--is-text-align-left"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align right - Sortable 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-sortable m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Name
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Age
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
      <th
        class="m--is-sortable m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-wrap"
        >
          <div
            class="m-table__sortable-icon-wrap"
          >
            <div
              class="m-table__header-name"
            >
              Username
            </div>
             
            <button
              class="m-icon-button m-table__sortable-icon m--is-skin-bold m--has-ripple"
              style="width: 14px; height: 14px;"
              title="Trier la colonne"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
          </div>
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        Jonathan
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        25
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        Carl
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        30
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        Jacob
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        26
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        Vincent
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        34
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        Manon
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        28
      </td>
      <td
        class="m--is-sortable m--is-text-align-right"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Text align right 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class="m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name
        </div>
      </th>
      <th
        class="m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
      <th
        class="m--is-text-align-right"
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Username
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td
        class="m--is-text-align-right"
      >
        Jonathan
      </td>
      <td
        class="m--is-text-align-right"
      >
        25
      </td>
      <td
        class="m--is-text-align-right"
      >
        jonathan.25
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-right"
      >
        Carl
      </td>
      <td
        class="m--is-text-align-right"
      >
        30
      </td>
      <td
        class="m--is-text-align-right"
      >
        carl.30
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-right"
      >
        Jacob
      </td>
      <td
        class="m--is-text-align-right"
      >
        26
      </td>
      <td
        class="m--is-text-align-right"
      >
        jacob.26
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-right"
      >
        Vincent
      </td>
      <td
        class="m--is-text-align-right"
      >
        34
      </td>
      <td
        class="m--is-text-align-right"
      >
        vincent.34
      </td>
    </tr>
    <tr>
      <td
        class="m--is-text-align-right"
      >
        Manon
      </td>
      <td
        class="m--is-text-align-right"
      >
        28
      </td>
      <td
        class="m--is-text-align-right"
      >
        manon.28
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;

exports[`Storyshots modul-components|m-table Width placeholer 1`] = `
<div
  style="overflow: auto; width: 500px;"
>
  <table
    cellspacing="0"
    class="m-table m--is-skin-regular m--is-row-highlighted-on-hover"
    style="width: 1000px;"
  >
    <thead>
      <tr>
        <th
          class=""
          scope="col"
        >
          <div
            class="m-table__header-name"
          >
            Name
          </div>
        </th>
        <th
          class=""
          scope="col"
        >
          <div
            class="m-table__header-name"
          >
            Age
          </div>
        </th>
        <th
          class=""
          scope="col"
        >
          <div
            class="m-table__header-name"
          >
            Username
          </div>
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr
        class="m-table__placeholder"
      >
        <td
          class="m-table__placeholder-container"
          colspan="100%"
          style="position: sticky;"
        >
          <!---->
           
          <div
            class="m-table__placeholder-message"
            style="width: 500px;"
          >
            <p>
              Aucune donnée à afficher
            </p>
             
            <!---->
          </div>
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</div>
`;

exports[`Storyshots modul-components|m-table skin="simple" 1`] = `
<table
  cellspacing="0"
  class="m-table m--is-skin-simple m--is-row-highlighted-on-hover"
  width="100%"
>
  <thead>
    <tr>
      <th
        class=""
        scope="col"
      >
        <div
          class="m-table__header-name"
        >
          Name, Username
        </div>
      </th>
      <th
        class=""
        scope="col"
        style="width: 80px;"
      >
        <div
          class="m-table__header-name"
        >
          Age
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td>
        Jonathan - jonathan.25
      </td>
       
      <td>
        25
      </td>
    </tr>
    <tr>
      <td>
        Carl - carl.30
      </td>
       
      <td>
        30
      </td>
    </tr>
    <tr>
      <td>
        Jacob - jacob.26
      </td>
       
      <td>
        26
      </td>
    </tr>
    <tr>
      <td>
        Vincent - vincent.34
      </td>
       
      <td>
        34
      </td>
    </tr>
  </tbody>
   
  <!---->
</table>
`;
